# quantum_comp

./: .gitignore  README.md  pyproject.toml
pulsar_search/: Untitled.ipynb  generate_toy_pulsar_data.py  quantum_pulsar_bits.ipynb  shor.ipynb  single_pulse_candidates.csv  toy_single_pulse_search.py  tutorial_variational_classifier.ipynb  utils.py
pulsar_search/.ipynb_checkpoints/: quantum_pulsar-checkpoint.ipynb  quantum_pulsar_bits-checkpoint.ipynb  shor-checkpoint.ipynb  tutorial_variational_classifier-checkpoint.ipynb
pulsar_search/knn/: README.md
pulsar_search/ml/: README.md
pulsar_search/ml/kernel/: README.md  Untitled.ipynb  kernel_pulsar_qiskit.ipynb  kernel_training_pulsar_qiskit.ipynb  tutorial_kernels_module.ipynb
pulsar_search/ml/knn/: Untitled.ipynb  knn_classical.py  knn_data.py  knn_quantum.py  (+2 more)
pulsar_search/period_finding/: README.md  quantum_pulsar.ipynb  shor4pulsar.ipynb  utils.py
qml_frb/: frb_dataset.csv  frb_dataset.xlsx  reupload_pennylane.ipynb
redcal/: LinAlg.ipynb  Makefile  README.md  entangled.dhall  reduncal_demo_QC.m
redcal/hhl/: README.md  hhl_exploratory.ipynb  hhl_minimal.ipynb  hhl_toymodel.ipynb  hhl_transpiling.ipynb
redcal/qubo_dwave/: README.md  create_qubo_matrix.py  qubo_redcal.ipynb  qubo_redcal_utils.py  test_qubo.py
redcal/scripts/: plot-1.py  plot-2.py
redcal/vqls/: README.md  get_b.py  unitary_decomp.py  vqls_redcal.ipynb  vqls_redcal_utils.py
redcal/vqls_pennylane/: VQLS_cleaning.ipynb  get_b.py  unitary_decomp.py  vqls.py  vqls_qiskit.ipynb  vqls_redcal.ipynb  vqls_redcal_utils.py  vqls_toy.ipynb
(+11 files in other folders)
