[tool.poetry]
name = "quantum_comp"
version = "0.1.0"
description = "Quantum Computing hotchpotch"
authors = ["Your Name <you@example.com>"]
license = "Apache-2"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
matplotlib = "^3.5.1"
jupyterlab = "^3.3.2"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
